<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#A2CD5A">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignTop="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textView1"
            android:id="@+id/textView1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />
   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="177dp"
       android:layout_height="wrap_content"
       android:text="@string/botao1"
       android:id="@+id/button1"
       android:layout_marginTop="62dp"
       android:layout_below="@+id/textView1"
       android:layout_alignRight="@+id/button2"
       android:layout_alignEnd="@+id/button2"
       android:layout_alignLeft="@+id/button7"
       android:layout_alignStart="@+id/button7"
       android:layout_gravity="center_horizontal" />

   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="177dp"
       android:layout_height="wrap_content"
       android:text="@string/botao2"
       android:id="@+id/button2"
       android:layout_below="@+id/button1"
       android:layout_alignRight="@+id/button5"
       android:layout_alignEnd="@+id/button5"
       android:layout_gravity="center_horizontal" />

   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="178dp"
       android:layout_height="wrap_content"
       android:text="@string/botao3"
       android:id="@+id/button3"
       android:layout_below="@+id/button2"
       android:layout_alignLeft="@+id/button4"
       android:layout_alignStart="@+id/button4"
       android:layout_alignRight="@+id/button2"
       android:layout_alignEnd="@+id/button2"
       android:layout_gravity="center_horizontal" />

   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="176dp"
       android:layout_height="wrap_content"
       android:text="@string/botao4"
       android:id="@+id/button4"
       android:layout_below="@+id/button3"
       android:layout_alignRight="@+id/button2"
       android:layout_alignEnd="@+id/button2"
       android:layout_alignLeft="@+id/button5"
       android:layout_alignStart="@+id/button5"
       android:layout_gravity="center_horizontal" />

   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="176dp"
       android:layout_height="wrap_content"
       android:text="@string/botao5"
       android:id="@+id/button5"
       android:layout_below="@+id/button4"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="179dp"
       android:layout_height="wrap_content"
       android:text="@string/botao6"
       android:id="@+id/button6"
       android:layout_below="@+id/button5"
       android:layout_alignLeft="@+id/button5"
       android:layout_alignStart="@+id/button5"
       android:layout_alignRight="@+id/button8"
       android:layout_alignEnd="@+id/button8"
       android:layout_gravity="center_horizontal" />

   <Button
       style="?android:attr/buttonStyleSmall"
       android:layout_width="178dp"
       android:layout_height="wrap_content"
       android:text="@string/botao7"
       android:id="@+id/button7"
       android:layout_below="@+id/button6"
       android:layout_alignLeft="@+id/button6"
       android:layout_alignStart="@+id/button6"
       android:layout_alignRight="@+id/button8"
       android:layout_alignEnd="@+id/button8"
       android:layout_gravity="center_horizontal" />

   <Button
       android:layout_width="178dp"
       android:layout_height="wrap_content"
       android:text="@string/botao8"
       android:id="@+id/button8"
       android:layout_below="@+id/button7"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/botao9"
       android:id="@+id/button9"
       android:layout_below="@+id/button8"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

   <Button
       android:layout_width="175dp"
       android:layout_height="wrap_content"
       android:text="@string/botao10"
       android:id="@+id/button10"
       android:layout_below="@+id/button9"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/botao11"
       android:id="@+id/button11"
       android:layout_below="@+id/button10"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

   <Button
       android:layout_width="173dp"
       android:layout_height="wrap_content"
       android:text="@string/botao12"
       android:id="@+id/button12"
       android:layout_below="@+id/button11"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

   <Button
       android:layout_width="174dp"
       android:layout_height="wrap_content"
       android:text="@string/botao13"
       android:id="@+id/button13"
       android:layout_below="@+id/button12"
       android:layout_centerHorizontal="true"
       android:layout_gravity="center_horizontal" />

    <Button
    android:layout_width="186dp"
    android:layout_height="wrap_content"
    android:text="@string/botao14"
    android:id="@+id/button14"
    android:layout_below="@+id/button13"
    android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />


    </LinearLayout>
    </ScrollView>
</ScrollView>
